# tensorflow-lite-micro

./: CMakeLists.txt
tensorflow/lite/kernels/internal/reference/: concatenation.h
tensorflow/lite/micro/oxts/: debug_log.cc  micro_time.cc
